# rust-workshop

./: Cargo.toml
01-basic/: Cargo.toml
01-basic/src/: tests.rs
02-control/: Cargo.toml
02-control/src/: tests.rs
03-types/: Cargo.toml
03-types/src/: tests.rs
04-ownership/: Cargo.toml
04-ownership/src/: tests.rs
05-lifetime/: Cargo.toml
06-trait/: Cargo.toml
06-trait/src/: tests.rs
07-pattern_matching/: Cargo.toml
07-pattern_matching/src/: tests.rs
08-generics/: Cargo.toml
08-generics/src/: tests.rs
09-error_management/: Cargo.toml
09-error_management/src/: tests.rs
11-collections/: Cargo.toml
11-collections/src/: tests.rs
13-memory/: Cargo.toml
solutions/: Cargo.toml
