[package]
name = "rust_workshop"

version = "0.2.0"
authors = ["Logan Mzz <loganmzz@users.noreply.github.com>", "alessio coltellacci <alessio.coltellacci@clever-cloud.com>"]

[workspace]

members = [
  "01-basic",
  "02-control",
  "03-types",
  "04-ownership",
  "05-lifetime",
  "06-trait",
  "07-pattern_matching",
  "08-generics",
  "09-error_management",
  "10-closure",
  "11-collections",
  "12-parallelism",
  "13-memory",
  "solutions",
]

[dependencies]
